[gd_scene load_steps=11 format=4 uid="uid://1m08dnxhnp3u"]

[ext_resource type="TileSet" uid="uid://cdgl7kv1h0a8a" path="res://Map/tile_set.tres" id="1_n55ho"]
[ext_resource type="Script" path="res://Map/level_1.gd" id="2_3etcl"]
[ext_resource type="PackedScene" uid="uid://cacp8md2xgjde" path="res://Utility/enemy_spawner.tscn" id="3_m1h7d"]
[ext_resource type="Script" path="res://Utility/spawn_info.gd" id="4_s5r1r"]
[ext_resource type="PackedScene" uid="uid://crbkt8wofhn03" path="res://Enemies/Mage/Mage.tscn" id="5_n4652"]
[ext_resource type="Script" path="res://Gui/GameUI.gd" id="6_t7rok"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_dms0q"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_mlu2w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mydb4"]
size = Vector2(49, 60)

[sub_resource type="Resource" id="Resource_qcre1"]
script = ExtResource("4_s5r1r")
time_start = 0
time_end = 60
enemy = ExtResource("5_n4652")
enemy_num = 1
enemy_spawn_delay = 0

[node name="Level1" type="TileMapLayer"]
position = Vector2(-271, -159)
tile_map_data = PackedByteArray("AAABAAAAAAAHAAEAADACAAAAAAAHAAEAADADAAAAAAAHAAEAADAEAAAAAAAHAAEAADAFAAAAAAAHAAEAADAGAAAAAAAHAAEAADAHAAAAAAAHAAEAADAIAAAAAAAHAAEAADAJAAAAAAAHAAEAADAKAAAAAAAHAAEAADALAAAAAAAHAAEAADAMAAAAAAAHAAEAADANAAAAAAAHAAEAADAOAAAAAAAHAAEAADAPAAAAAAAGAAEAADAQAAAAAAACAAIAAAARAAAAAAAFAAIAAAASAAAAAAADAAMAAAATAAAAAAAIAAEAADAUAAAAAAAHAAEAADAVAAAAAAAHAAEAADAWAAAAAAAHAAEAADAXAAAAAAAHAAEAADAYAAAAAAAHAAEAADAZAAAAAAAHAAEAADAaAAAAAAAHAAEAADAbAAAAAAAHAAEAADAcAAAAAAAHAAEAADAdAAAAAAAHAAEAADAeAAAAAAAHAAEAADAfAAAAAAAHAAEAADAAAAAAAAAGAAMAADAgAAAAAAAIAAMAADAAAAEAAAAIAAIAAAAAAAIAAAAIAAIAAAAAAAMAAAAIAAIAAAAAAAQAAAAIAAIAAAAAAAUAAAAIAAIAAAAAAAYAAAAIAAIAAAAAAAcAAAAIAAIAAAAAAAgAAAAIAAIAAAAAAAkAAAAIAAIAAAAAAAoAAAAIAAIAAAAAAAsAAAAIAAIAAAAAAAwAAAAIAAIAAAAAAA0AAAAIAAIAAAAAAA4AAAAIAAIAAAAAAA8AAAAIAAIAAAAAABAAAAAIAAIAAAAAABEAAAAIAAIAAAAAABIAAAAIAAIAAAAAABMAAAAIAAMAAAAgAAEAAAAGAAIAAAAgAAIAAAAGAAIAAAAgAAMAAAAGAAIAAAAgAAQAAAAGAAIAAAAgAAUAAAAGAAIAAAAgAAYAAAAGAAIAAAAgAAcAAAAGAAIAAAAgAAgAAAAGAAIAAAAgAAkAAAAGAAIAAAAgAAoAAAAGAAIAAAAgAAsAAAAGAAIAAAAgAAwAAAAGAAIAAAAgAA0AAAAGAAIAAAAgAA4AAAAGAAIAAAAgAA8AAAAGAAIAAAAgABAAAAAGAAIAAAAgABEAAAAGAAIAAAAgABIAAAAGAAIAAAABABMAAAAHAAEAAAACABMAAAAHAAEAAAADABMAAAAHAAEAAAAEABMAAAAHAAEAAAAFABMAAAAHAAEAAAAGABMAAAAHAAEAAAAHABMAAAAHAAEAAAAIABMAAAAHAAEAAAAJABMAAAAHAAEAAAAKABMAAAAHAAEAAAALABMAAAAHAAEAAAAMABMAAAAHAAEAAAANABMAAAAHAAEAAAAOABMAAAAHAAEAAAAPABMAAAAIAAEAAAAQABMAAAACAAIAAAARABMAAAAEAAIAAAASABMAAAACAAIAAAATABMAAAAGAAEAAAAUABMAAAAHAAEAAAAVABMAAAAHAAEAAAAWABMAAAAHAAEAAAAXABMAAAAHAAEAAAAYABMAAAAHAAEAAAAZABMAAAAHAAEAAAAaABMAAAAHAAEAAAAbABMAAAAHAAEAAAAcABMAAAAHAAEAAAAdABMAAAAHAAEAAAAeABMAAAAHAAEAAAAfABMAAAAHAAEAAAAgABMAAAAGAAMAAAABAAEAAAACAAEAAAABAAIAAAAFAAIAAAACAAIAAAAEAAMAAAADAAIAAAAFAAIAAAADAAMAAAAEAAIAAAAEAAMAAAAFAAMAAAAFAAMAAAADAAMAAAAFAAQAAAAEAAMAAAAGAAQAAAACAAIAAAAGAAUAAAADAAEAAAAHAAUAAAACAAEAAAAHAAYAAAACAAIAAAAIAAYAAAAFAAMAAAAIAAcAAAADAAEAAAAJAAcAAAAFAAIAAAABAAMAAAAFAAMAAAABAAQAAAAEAAIAAAABAAUAAAADAAEAAAABAAYAAAAEAAIAAAABAAcAAAADAAEAAAABAAgAAAAFAAMAAAABAAkAAAAFAAMAAAABAAoAAAAEAAIAAAABAAsAAAAEAAMAAAABAAwAAAAFAAMAAAABAA0AAAADAAMAAAABAA4AAAAFAAIAAAABAA8AAAAFAAMAAAABABAAAAADAAMAAAABABEAAAACAAEAAAABABIAAAAEAAIAAAACABIAAAAFAAMAAAADABIAAAACAAEAAAAEABIAAAADAAEAAAAFABIAAAADAAMAAAAGABIAAAAEAAIAAAAHABIAAAADAAIAAAAIABIAAAADAAMAAAAJABIAAAADAAIAAAAKABIAAAADAAMAAAALABIAAAACAAIAAAAMABIAAAADAAEAAAANABIAAAAFAAIAAAAOABIAAAACAAIAAAAPABIAAAAFAAIAAAAQABIAAAACAAIAAAARABIAAAACAAMAAAASABIAAAAEAAMAAAATABIAAAAEAAIAAAAUABIAAAADAAMAAAAVABIAAAAEAAMAAAAWABIAAAAEAAMAAAAXABIAAAACAAIAAAAYABIAAAACAAIAAAAZABIAAAAEAAIAAAAaABIAAAAEAAIAAAAbABIAAAAEAAIAAAAcABIAAAACAAEAAAAdABIAAAAEAAMAAAAeABIAAAACAAMAAAAfABIAAAADAAIAAAAfABEAAAACAAMAAAAfABAAAAAFAAIAAAAfAA8AAAADAAIAAAAfAA4AAAACAAEAAAAfAA0AAAAEAAMAAAAfAAwAAAACAAIAAAAfAAsAAAAFAAMAAAAfAAoAAAAEAAIAAAAfAAkAAAACAAMAAAAfAAgAAAADAAIAAAAfAAcAAAACAAMAAAAfAAYAAAADAAEAAAAfAAUAAAAFAAMAAAAfAAQAAAADAAEAAAAfAAMAAAAFAAIAAAAfAAIAAAADAAEAAAAfAAEAAAAFAAMAAAAeAAEAAAAFAAMAAAAdAAEAAAACAAMAAAAcAAEAAAADAAIAAAAbAAEAAAACAAEAAAAaAAEAAAAEAAMAAAAZAAEAAAAEAAMAAAAYAAEAAAAEAAMAAAAXAAEAAAAFAAMAAAAXAAIAAAACAAIAAAAWAAIAAAACAAIAAAAVAAIAAAADAAMAAAAUAAIAAAAFAAMAAAATAAIAAAADAAEAAAASAAIAAAAFAAMAAAARAAIAAAADAAEAAAAQAAEAAAAFAAMAAAAPAAEAAAADAAMAAAAOAAEAAAADAAEAAAANAAEAAAADAAEAAAAMAAEAAAACAAEAAAALAAEAAAAFAAMAAAAKAAIAAAAFAAIAAAAJAAIAAAACAAEAAAAIAAEAAAACAAIAAAAHAAEAAAACAAIAAAAGAAEAAAAFAAMAAAAFAAEAAAADAAEAAAAEAAEAAAAEAAIAAAADAAEAAAADAAIAAAACAAEAAAACAAEAAAAJAAEAAAACAAMAAAAKAAEAAAAEAAIAAAARAAEAAAAEAAIAAAASAAEAAAADAAEAAAATAAEAAAAFAAMAAAAUAAEAAAADAAMAAAAVAAEAAAAEAAIAAAAWAAEAAAACAAMAAAAZAAQAAAACAAEAAAAYAAUAAAAEAAIAAAAXAAYAAAADAAMAAAAWAAYAAAAEAAMAAAAVAAcAAAACAAEAAAAUAAgAAAAEAAIAAAATAAkAAAAFAAIAAAAcAAQAAAACAAMAAAAbAAUAAAACAAMAAAAaAAYAAAAFAAMAAAAaAAcAAAAFAAIAAAAZAAgAAAAEAAIAAAAYAAkAAAAEAAMAAAAXAAoAAAACAAIAAAASAAoAAAAEAAIAAAASAAsAAAACAAMAAAASAAwAAAACAAIAAAATAAoAAAADAAEAAAATAAsAAAAFAAIAAAATAAwAAAAEAAMAAAAUAAoAAAACAAEAAAAUAAsAAAAEAAMAAAAUAAwAAAACAAIAAAAVAAoAAAADAAEAAAAVAAsAAAAFAAMAAAAVAAwAAAAFAAIAAAAWAAoAAAACAAIAAAAWAAsAAAADAAMAAAAWAAwAAAADAAMAAAAXAAsAAAAFAAIAAAAXAAwAAAADAAEAAAAYAAoAAAAEAAMAAAAYAAsAAAAFAAIAAAAYAAwAAAADAAEAAAAZAAoAAAADAAMAAAAZAAsAAAADAAMAAAAZAAwAAAADAAEAAAAaAAoAAAACAAEAAAAaAAsAAAADAAIAAAAaAAwAAAACAAMAAAACAAMAAAADAAIAAAACAAQAAAADAAIAAAACAAUAAAACAAEAAAACAAYAAAACAAMAAAACAAcAAAAFAAMAAAACAAgAAAAFAAMAAAACAAkAAAADAAEAAAACAAoAAAACAAMAAAACAAsAAAADAAIAAAACAAwAAAACAAMAAAACAA0AAAADAAIAAAACAA4AAAADAAMAAAACAA8AAAAEAAMAAAACABAAAAAFAAIAAAACABEAAAAEAAIAAAADAAQAAAAFAAIAAAADAAUAAAACAAMAAAADAAYAAAAEAAIAAAADAAcAAAADAAMAAAADAAgAAAACAAEAAAADAAkAAAAEAAMAAAADAAoAAAAEAAMAAAADAAsAAAAEAAMAAAADAAwAAAADAAIAAAADAA0AAAAEAAMAAAADAA4AAAAEAAIAAAADAA8AAAACAAMAAAADABAAAAACAAMAAAADABEAAAAEAAMAAAAEAAIAAAAFAAIAAAAEAAQAAAACAAMAAAAEAAUAAAACAAMAAAAEAAYAAAAFAAIAAAAEAAcAAAADAAEAAAAEAAgAAAAFAAIAAAAEAAkAAAADAAEAAAAEAAoAAAADAAMAAAAEAAsAAAADAAEAAAAEAAwAAAADAAEAAAAEAA0AAAADAAEAAAAEAA4AAAADAAMAAAAEAA8AAAAFAAMAAAAEABAAAAAFAAMAAAAEABEAAAAEAAMAAAAFAAIAAAACAAEAAAAFAAUAAAAFAAIAAAAFAAYAAAACAAEAAAAFAAcAAAACAAIAAAAFAAgAAAACAAMAAAAFAAkAAAAEAAMAAAAFAAoAAAACAAIAAAAFAAsAAAACAAIAAAAFAAwAAAAEAAIAAAAFAA0AAAAFAAMAAAAFAA4AAAACAAIAAAAFAA8AAAAFAAIAAAAFABAAAAACAAMAAAAFABEAAAACAAMAAAAGAAIAAAACAAIAAAAGAAMAAAACAAIAAAAGAAYAAAAEAAIAAAAGAAcAAAACAAIAAAAGAAgAAAACAAMAAAAGAAkAAAADAAEAAAAGAAoAAAADAAIAAAAGAAsAAAADAAIAAAAGAAwAAAADAAMAAAAGAA0AAAADAAIAAAAGAA4AAAACAAIAAAAGAA8AAAADAAEAAAAGABAAAAACAAEAAAAGABEAAAACAAIAAAAHAAIAAAACAAMAAAAHAAMAAAAEAAMAAAAHAAQAAAACAAIAAAAHAAcAAAADAAIAAAAHAAgAAAAFAAMAAAAHAAkAAAAFAAMAAAAHAAoAAAAFAAIAAAAHAAsAAAACAAEAAAAHAAwAAAACAAEAAAAHAA0AAAAFAAMAAAAHAA4AAAACAAMAAAAHAA8AAAADAAEAAAAHABAAAAADAAMAAAAHABEAAAAFAAIAAAAIAAIAAAACAAEAAAAIAAMAAAACAAEAAAAIAAQAAAAEAAMAAAAIAAUAAAACAAIAAAAIAAgAAAAFAAMAAAAIAAkAAAACAAMAAAAIAAoAAAADAAIAAAAIAAsAAAAFAAMAAAAIAAwAAAAFAAMAAAAIAA0AAAAEAAMAAAAIAA4AAAADAAEAAAAIAA8AAAADAAMAAAAIABAAAAACAAIAAAAIABEAAAADAAMAAAAJAAMAAAADAAMAAAAJAAQAAAADAAEAAAAJAAUAAAAFAAMAAAAJAAYAAAAFAAIAAAAJAAgAAAACAAEAAAAJAAkAAAADAAMAAAAJAAoAAAAEAAMAAAAJAAsAAAAFAAMAAAAJAAwAAAAFAAMAAAAJAA0AAAAFAAMAAAAJAA4AAAAEAAIAAAAJAA8AAAAEAAIAAAAJABAAAAADAAMAAAAJABEAAAAFAAIAAAAKAAMAAAACAAEAAAAKAAQAAAACAAMAAAAKAAUAAAACAAIAAAAKAAYAAAACAAIAAAAKAAcAAAACAAIAAAAKAAgAAAAFAAIAAAAKAAkAAAADAAIAAAAKAAoAAAADAAIAAAAKAAsAAAAFAAMAAAAKAAwAAAAEAAIAAAAKAA0AAAAFAAIAAAAKAA4AAAACAAMAAAAKAA8AAAADAAIAAAAKABAAAAACAAEAAAAKABEAAAAFAAMAAAALAAIAAAAEAAMAAAALAAMAAAAFAAIAAAALAAQAAAADAAMAAAALAAUAAAACAAEAAAALAAYAAAAEAAIAAAALAAcAAAACAAIAAAALAAgAAAAFAAIAAAALAAkAAAADAAMAAAALAAoAAAADAAEAAAALAAsAAAADAAIAAAALAAwAAAACAAMAAAALAA0AAAAEAAIAAAALAA4AAAADAAIAAAALAA8AAAADAAMAAAALABAAAAAFAAMAAAALABEAAAAEAAIAAAAMAAIAAAACAAEAAAAMAAMAAAAFAAMAAAAMAAQAAAADAAMAAAAMAAUAAAAFAAIAAAAMAAYAAAADAAMAAAAMAAcAAAAFAAIAAAAMAAgAAAAFAAIAAAAMAAkAAAAEAAMAAAAMAAoAAAADAAEAAAAMAAsAAAAFAAMAAAAMAAwAAAADAAIAAAAMAA0AAAADAAIAAAAMAA4AAAADAAIAAAAMAA8AAAAEAAMAAAAMABAAAAADAAMAAAAMABEAAAADAAIAAAANAAIAAAAEAAMAAAANAAMAAAADAAMAAAANAAQAAAAEAAIAAAANAAUAAAADAAIAAAANAAYAAAAEAAIAAAANAAcAAAACAAIAAAANAAgAAAAEAAIAAAANAAkAAAACAAIAAAANAAoAAAAEAAMAAAANAAsAAAAFAAMAAAANAAwAAAACAAEAAAANAA0AAAACAAIAAAANAA4AAAADAAIAAAANAA8AAAADAAEAAAANABAAAAADAAEAAAANABEAAAAFAAIAAAAOAAIAAAACAAIAAAAOAAMAAAAEAAMAAAAOAAQAAAAEAAMAAAAOAAUAAAAEAAMAAAAOAAYAAAAFAAMAAAAOAAcAAAAEAAMAAAAOAAgAAAAEAAIAAAAOAAkAAAACAAMAAAAOAAoAAAAFAAIAAAAOAAsAAAAFAAMAAAAOAAwAAAAEAAMAAAAOAA4AAAACAAIAAAAOAA8AAAAEAAIAAAAOABAAAAAEAAIAAAAOABEAAAAFAAMAAAAPAAIAAAADAAEAAAAPAAMAAAACAAEAAAAPAAQAAAADAAIAAAAPAAUAAAACAAIAAAAPAAYAAAACAAMAAAAPAAcAAAADAAMAAAAPAAgAAAADAAMAAAAPAAkAAAACAAEAAAAPAAoAAAAFAAIAAAAPAAsAAAAEAAIAAAAPAAwAAAACAAEAAAAPAA0AAAACAAIAAAAPAA4AAAAFAAIAAAAPAA8AAAADAAEAAAAPABAAAAAFAAMAAAAPABEAAAADAAEAAAAQAAIAAAAFAAMAAAAQAAMAAAACAAMAAAAQAAQAAAADAAEAAAAQAAUAAAADAAIAAAAQAAYAAAACAAMAAAAQAAcAAAAFAAMAAAAQAAgAAAADAAEAAAAQAAkAAAACAAEAAAAQAAoAAAAFAAIAAAAQAAsAAAADAAEAAAAQAAwAAAAEAAIAAAAQAA0AAAAFAAMAAAAQAA4AAAADAAMAAAAQAA8AAAAEAAMAAAAQABAAAAACAAEAAAAQABEAAAAEAAMAAAARAAMAAAADAAMAAAARAAQAAAADAAEAAAARAAUAAAACAAMAAAARAAYAAAAEAAMAAAARAAcAAAADAAEAAAARAAgAAAADAAIAAAARAAkAAAAEAAIAAAARAAoAAAAEAAIAAAARAAsAAAACAAMAAAARAAwAAAACAAIAAAARAA0AAAAFAAMAAAARAA4AAAACAAEAAAARAA8AAAAFAAMAAAARABAAAAACAAEAAAARABEAAAACAAMAAAASAAMAAAACAAMAAAASAAQAAAADAAEAAAASAAUAAAAFAAMAAAASAAYAAAADAAEAAAASAAcAAAAFAAMAAAASAAgAAAAFAAMAAAASAAkAAAADAAMAAAASAA0AAAACAAEAAAASAA4AAAACAAEAAAASAA8AAAADAAIAAAASABAAAAADAAEAAAASABEAAAADAAIAAAATAAMAAAADAAMAAAATAAQAAAADAAEAAAATAAUAAAAFAAIAAAATAAYAAAACAAMAAAATAAcAAAADAAIAAAATAAgAAAACAAEAAAATAA0AAAAFAAIAAAATAA4AAAAEAAIAAAATAA8AAAADAAMAAAATABAAAAAFAAMAAAATABEAAAADAAEAAAAUAAMAAAADAAIAAAAUAAQAAAAFAAIAAAAUAAUAAAADAAEAAAAUAAYAAAACAAEAAAAUAAcAAAADAAEAAAAUAAkAAAADAAMAAAAUAA0AAAACAAIAAAAUAA4AAAACAAEAAAAUAA8AAAACAAIAAAAUABAAAAAFAAMAAAAUABEAAAAFAAIAAAAVAAMAAAACAAMAAAAVAAQAAAADAAMAAAAVAAUAAAADAAIAAAAVAAYAAAAEAAMAAAAVAAgAAAAFAAMAAAAVAAkAAAACAAEAAAAVAA0AAAAEAAIAAAAVAA4AAAAFAAMAAAAVAA8AAAAFAAMAAAAVABAAAAACAAMAAAAVABEAAAAEAAMAAAAWAAMAAAADAAIAAAAWAAQAAAADAAIAAAAWAAUAAAAEAAIAAAAWAAcAAAACAAEAAAAWAAgAAAACAAEAAAAWAAkAAAACAAMAAAAWAA0AAAAEAAMAAAAWAA4AAAADAAIAAAAWAA8AAAADAAIAAAAWABAAAAACAAEAAAAWABEAAAACAAEAAAAXAAMAAAADAAMAAAAXAAQAAAADAAMAAAAXAAUAAAADAAMAAAAXAAcAAAACAAIAAAAXAAgAAAAFAAIAAAAXAAkAAAACAAMAAAAXAA0AAAAFAAIAAAAXAA4AAAADAAMAAAAXAA8AAAACAAIAAAAXABAAAAAFAAIAAAAXABEAAAAFAAMAAAAYAAIAAAACAAMAAAAYAAMAAAACAAIAAAAYAAQAAAAFAAIAAAAYAAYAAAAEAAMAAAAYAAcAAAACAAEAAAAYAAgAAAADAAEAAAAYAA0AAAACAAIAAAAYAA4AAAAEAAMAAAAYAA8AAAACAAEAAAAYABAAAAACAAIAAAAYABEAAAACAAEAAAAZAAIAAAADAAIAAAAZAAMAAAACAAMAAAAZAAUAAAAFAAIAAAAZAAYAAAAEAAIAAAAZAAcAAAACAAIAAAAZAAkAAAAFAAMAAAAZAA0AAAACAAMAAAAZAA4AAAAEAAIAAAAZAA8AAAAFAAMAAAAZABAAAAACAAIAAAAZABEAAAACAAIAAAAaAAIAAAADAAIAAAAaAAMAAAAEAAIAAAAaAAQAAAAEAAMAAAAaAAUAAAADAAIAAAAaAAgAAAAFAAIAAAAaAAkAAAADAAEAAAAaAA0AAAADAAMAAAAaAA4AAAACAAEAAAAaAA8AAAAEAAIAAAAaABAAAAACAAIAAAAaABEAAAAEAAIAAAAbAAIAAAAEAAMAAAAbAAMAAAADAAEAAAAbAAQAAAAFAAMAAAAbAAYAAAACAAIAAAAbAAcAAAAEAAMAAAAbAAgAAAADAAMAAAAbAAkAAAADAAEAAAAbAAoAAAACAAEAAAAbAAsAAAACAAIAAAAbAAwAAAACAAMAAAAbAA0AAAACAAEAAAAbAA4AAAAFAAMAAAAbAA8AAAACAAIAAAAbABAAAAADAAIAAAAbABEAAAADAAMAAAAcAAIAAAADAAEAAAAcAAMAAAADAAMAAAAcAAUAAAAFAAIAAAAcAAYAAAAFAAMAAAAcAAcAAAAFAAMAAAAcAAgAAAAFAAMAAAAcAAkAAAACAAMAAAAcAAoAAAACAAIAAAAcAAsAAAACAAEAAAAcAAwAAAAFAAIAAAAcAA0AAAADAAMAAAAcAA4AAAACAAIAAAAcAA8AAAACAAMAAAAcABAAAAADAAMAAAAcABEAAAACAAMAAAAdAAIAAAAEAAMAAAAdAAMAAAAEAAMAAAAdAAQAAAACAAMAAAAdAAUAAAADAAEAAAAdAAYAAAADAAMAAAAdAAcAAAAEAAIAAAAdAAgAAAAEAAMAAAAdAAkAAAACAAEAAAAdAAoAAAAEAAMAAAAdAAsAAAACAAIAAAAdAAwAAAAEAAIAAAAdAA0AAAAFAAIAAAAdAA4AAAADAAIAAAAdAA8AAAADAAEAAAAdABAAAAAEAAIAAAAdABEAAAAFAAIAAAAeAAIAAAAEAAIAAAAeAAMAAAADAAEAAAAeAAQAAAAFAAIAAAAeAAUAAAAFAAIAAAAeAAYAAAAFAAIAAAAeAAcAAAACAAEAAAAeAAgAAAAEAAMAAAAeAAkAAAACAAIAAAAeAAoAAAADAAIAAAAeAAsAAAADAAMAAAAeAAwAAAACAAMAAAAeAA0AAAACAAMAAAAeAA4AAAAEAAMAAAAeAA8AAAAFAAMAAAAeABAAAAACAAEAAAAeABEAAAAEAAIAAAAOAA0AAAADAAIAAAAQABQAAAACAAMAAAAhABQAAAACAAEAAAAhABUAAAACAAEAAAAhABYAAAACAAEAAAAiABQAAAACAAEAAAAiABUAAAACAAEAAAAiABYAAAACAAEAAAAjABQAAAACAAEAAAAjABUAAAACAAEAAAAjABYAAAACAAEAAAAhAP3/AAACAAEAAAAhAP7/AAACAAEAAAAhAP//AAACAAEAAAAhAAAAAAACAAEAAAAhAAEAAAACAAEAAAAhAAIAAAACAAEAAAAhAAMAAAACAAEAAAAhAAQAAAACAAEAAAAhAAUAAAACAAEAAAAhAAYAAAACAAEAAAAhAAcAAAACAAEAAAAhAAgAAAACAAEAAAAhAAkAAAACAAEAAAAhAAoAAAACAAEAAAAhAAsAAAACAAEAAAAhAAwAAAACAAEAAAAhAA0AAAACAAEAAAAhAA4AAAACAAEAAAAhAA8AAAACAAEAAAAhABAAAAACAAEAAAAhABEAAAACAAEAAAAhABIAAAACAAEAAAAhABMAAAACAAEAAAAiAP3/AAACAAEAAAAiAP7/AAACAAEAAAAiAP//AAACAAEAAAAiAAAAAAACAAEAAAAiAAEAAAACAAEAAAAiAAIAAAACAAEAAAAiAAMAAAACAAEAAAAiAAQAAAACAAEAAAAiAAUAAAACAAEAAAAiAAYAAAACAAEAAAAiAAcAAAACAAEAAAAiAAgAAAACAAEAAAAiAAkAAAACAAEAAAAiAAoAAAACAAEAAAAiAAsAAAACAAEAAAAiAAwAAAACAAEAAAAiAA0AAAACAAEAAAAiAA4AAAACAAEAAAAiAA8AAAACAAEAAAAiABAAAAACAAEAAAAiABEAAAACAAEAAAAiABIAAAACAAEAAAAiABMAAAACAAEAAAAjAP3/AAACAAEAAAAjAP7/AAACAAEAAAAjAP//AAACAAEAAAAjAAAAAAACAAEAAAAjAAEAAAACAAEAAAAjAAIAAAACAAEAAAAjAAMAAAACAAEAAAAjAAQAAAACAAEAAAAjAAUAAAACAAEAAAAjAAYAAAACAAEAAAAjAAcAAAACAAEAAAAjAAgAAAACAAEAAAAjAAkAAAACAAEAAAAjAAoAAAACAAEAAAAjAAsAAAACAAEAAAAjAAwAAAACAAEAAAAjAA0AAAACAAEAAAAjAA4AAAACAAEAAAAjAA8AAAACAAEAAAAjABAAAAACAAEAAAAjABEAAAACAAEAAAAjABIAAAACAAEAAAAjABMAAAACAAEAAAD9//7/AAACAAEAAAD9////AAACAAEAAAD+//3/AAACAAEAAAD+//7/AAACAAEAAAD+////AAACAAEAAAD///3/AAACAAEAAAD///7/AAACAAEAAAD/////AAACAAEAAAAAAP3/AAACAAEAAAAAAP7/AAACAAEAAAAAAP//AAACAAEAAAABAP3/AAACAAEAAAABAP7/AAACAAEAAAABAP//AAACAAEAAAACAP3/AAACAAEAAAACAP7/AAACAAEAAAACAP//AAACAAEAAAADAP3/AAACAAEAAAADAP7/AAACAAEAAAADAP//AAACAAEAAAAEAP3/AAACAAEAAAAEAP7/AAACAAEAAAAEAP//AAACAAEAAAAFAP3/AAACAAEAAAAFAP7/AAACAAEAAAAFAP//AAACAAEAAAAGAP3/AAACAAEAAAAGAP7/AAACAAEAAAAGAP//AAACAAEAAAAHAP3/AAACAAEAAAAHAP7/AAACAAEAAAAHAP//AAACAAEAAAAIAP3/AAACAAEAAAAIAP7/AAACAAEAAAAIAP//AAACAAEAAAAJAP3/AAACAAEAAAAJAP7/AAACAAEAAAAJAP//AAACAAEAAAAKAP3/AAACAAEAAAAKAP7/AAACAAEAAAAKAP//AAACAAEAAAALAP3/AAACAAEAAAALAP7/AAACAAEAAAALAP//AAACAAEAAAAMAP3/AAACAAEAAAAMAP7/AAACAAEAAAAMAP//AAACAAEAAAANAP3/AAACAAEAAAANAP7/AAACAAEAAAANAP//AAACAAEAAAAOAP3/AAACAAEAAAAOAP7/AAACAAEAAAAOAP//AAACAAEAAAAPAP3/AAAGAAIAADAPAP7/AAAGAAIAADAPAP//AAAGAAIAADAQAP3/AAADAAMAAAAQAP7/AAACAAIAAAAQAP//AAACAAEAAAARAP3/AAAFAAMAAAARAP7/AAACAAMAAAARAP//AAAFAAIAAAASAP3/AAAEAAIAAAASAP7/AAADAAMAAAASAP//AAACAAIAAAATAP3/AAAIAAIAADATAP7/AAAIAAIAADATAP//AAAIAAIAADAUAP3/AAACAAEAAAAUAP7/AAACAAEAAAAUAP//AAACAAEAAAAVAP3/AAACAAEAAAAVAP7/AAACAAEAAAAVAP//AAACAAEAAAAWAP3/AAACAAEAAAAWAP7/AAACAAEAAAAWAP//AAACAAEAAAAXAP3/AAACAAEAAAAXAP7/AAACAAEAAAAXAP//AAACAAEAAAAYAP3/AAACAAEAAAAYAP7/AAACAAEAAAAYAP//AAACAAEAAAAZAP3/AAACAAEAAAAZAP7/AAACAAEAAAAZAP//AAACAAEAAAAaAP3/AAACAAEAAAAaAP7/AAACAAEAAAAaAP//AAACAAEAAAAbAP3/AAACAAEAAAAbAP7/AAACAAEAAAAbAP//AAACAAEAAAAcAP3/AAACAAEAAAAcAP7/AAACAAEAAAAcAP//AAACAAEAAAAdAP3/AAACAAEAAAAdAP7/AAACAAEAAAAdAP//AAACAAEAAAAeAP3/AAACAAEAAAAeAP7/AAACAAEAAAAeAP//AAACAAEAAAAfAP3/AAACAAEAAAAfAP7/AAACAAEAAAAfAP//AAACAAEAAAAgAP3/AAACAAEAAAAgAP7/AAACAAEAAAAgAP//AAACAAEAAAD9/wAAAAACAAEAAAD9/wEAAAACAAEAAAD9/wIAAAACAAEAAAD9/wMAAAACAAEAAAD9/wQAAAACAAEAAAD9/wUAAAACAAEAAAD9/wYAAAACAAEAAAD9/wcAAAACAAEAAAD9/wgAAAACAAEAAAD9/wkAAAACAAEAAAD9/woAAAACAAEAAAD9/wsAAAACAAEAAAD9/wwAAAACAAEAAAD9/w0AAAACAAEAAAD9/w4AAAACAAEAAAD9/w8AAAACAAEAAAD9/xAAAAACAAEAAAD9/xEAAAACAAEAAAD9/xIAAAACAAEAAAD9/xMAAAACAAEAAAD9/xQAAAACAAEAAAD9/xUAAAACAAEAAAD9/xYAAAACAAEAAAD+/wAAAAACAAEAAAD+/wEAAAACAAEAAAD+/wIAAAACAAEAAAD+/wMAAAACAAEAAAD+/wQAAAACAAEAAAD+/wUAAAACAAEAAAD+/wYAAAACAAEAAAD+/wcAAAACAAEAAAD+/wgAAAACAAEAAAD+/wkAAAACAAEAAAD+/woAAAACAAEAAAD+/wsAAAACAAEAAAD+/wwAAAACAAEAAAD+/w0AAAACAAEAAAD+/w4AAAACAAEAAAD+/w8AAAACAAEAAAD+/xAAAAACAAEAAAD+/xEAAAACAAEAAAD+/xIAAAACAAEAAAD+/xMAAAACAAEAAAD+/xQAAAACAAEAAAD+/xUAAAACAAEAAAD+/xYAAAACAAEAAAD//wAAAAACAAEAAAD//wEAAAACAAEAAAD//wIAAAACAAEAAAD//wMAAAACAAEAAAD//wQAAAACAAEAAAD//wUAAAACAAEAAAD//wYAAAACAAEAAAD//wcAAAACAAEAAAD//wgAAAACAAEAAAD//wkAAAACAAEAAAD//woAAAACAAEAAAD//wsAAAACAAEAAAD//wwAAAACAAEAAAD//w0AAAACAAEAAAD//w4AAAACAAEAAAD//w8AAAACAAEAAAD//xAAAAACAAEAAAD//xEAAAACAAEAAAD//xIAAAACAAEAAAD//xMAAAACAAEAAAD//xQAAAACAAEAAAD//xUAAAACAAEAAAD//xYAAAACAAEAAAAAABQAAAACAAEAAAAAABUAAAACAAEAAAAAABYAAAACAAEAAAABABQAAAACAAEAAAABABUAAAACAAEAAAABABYAAAACAAEAAAACABQAAAACAAEAAAACABUAAAACAAEAAAACABYAAAACAAEAAAADABQAAAACAAEAAAADABUAAAACAAEAAAADABYAAAACAAEAAAAEABQAAAACAAEAAAAEABUAAAACAAEAAAAEABYAAAACAAEAAAAFABQAAAACAAEAAAAFABUAAAACAAEAAAAFABYAAAACAAEAAAAGABQAAAACAAEAAAAGABUAAAACAAEAAAAGABYAAAACAAEAAAAHABQAAAACAAEAAAAHABUAAAACAAEAAAAHABYAAAACAAEAAAAIABQAAAACAAEAAAAIABUAAAACAAEAAAAIABYAAAACAAEAAAAJABQAAAACAAEAAAAJABUAAAACAAEAAAAJABYAAAACAAEAAAAKABQAAAACAAEAAAAKABUAAAACAAEAAAAKABYAAAACAAEAAAALABQAAAACAAEAAAALABUAAAACAAEAAAALABYAAAACAAEAAAAMABQAAAACAAEAAAAMABUAAAACAAEAAAAMABYAAAACAAEAAAANABQAAAACAAEAAAANABUAAAACAAEAAAANABYAAAACAAEAAAAOABQAAAACAAEAAAAOABUAAAACAAEAAAAOABYAAAACAAEAAAAPABQAAAAIAAIAAAAPABUAAAAIAAIAAAAPABYAAAAIAAIAAAAQABUAAAACAAEAAAAQABYAAAACAAIAAAARABQAAAADAAEAAAARABUAAAADAAIAAAARABYAAAADAAEAAAASABQAAAAFAAMAAAASABUAAAAFAAIAAAASABYAAAAEAAIAAAATABQAAAAGAAIAAAATABUAAAAGAAIAAAATABYAAAAGAAIAAAAUABQAAAACAAEAAAAUABUAAAACAAEAAAAUABYAAAACAAEAAAAVABQAAAACAAEAAAAVABUAAAACAAEAAAAVABYAAAACAAEAAAAWABQAAAACAAEAAAAWABUAAAACAAEAAAAWABYAAAACAAEAAAAXABQAAAACAAEAAAAXABUAAAACAAEAAAAXABYAAAACAAEAAAAYABQAAAACAAEAAAAYABUAAAACAAEAAAAYABYAAAACAAEAAAAZABQAAAACAAEAAAAZABUAAAACAAEAAAAZABYAAAACAAEAAAAaABQAAAACAAEAAAAaABUAAAACAAEAAAAaABYAAAACAAEAAAAbABQAAAACAAEAAAAbABUAAAACAAEAAAAbABYAAAACAAEAAAAcABQAAAACAAEAAAAcABUAAAACAAEAAAAcABYAAAACAAEAAAAdABQAAAACAAEAAAAdABUAAAACAAEAAAAdABYAAAACAAEAAAAeABQAAAACAAEAAAAeABUAAAACAAEAAAAeABYAAAACAAEAAAAfABQAAAACAAEAAAAfABUAAAACAAEAAAAfABYAAAACAAEAAAAgABQAAAACAAEAAAAgABUAAAACAAEAAAAgABYAAAACAAEAAAD9//3/AAACAAEAAAA=")
tile_set = ExtResource("1_n55ho")
script = ExtResource("2_3etcl")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(279, 335)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(271, 158)
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(279, 368)
physics_material_override = SubResource("PhysicsMaterial_dms0q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_mlu2w")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(280, -18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_mydb4")

[node name="UpperLeftLimit" type="Marker2D" parent="."]
light_mask = 5
visibility_layer = 5
position = Vector2(-48, -48)

[node name="BottomRightLimit" type="Marker2D" parent="."]
visibility_layer = 5
position = Vector2(576, 368)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
position = Vector2(313.5, 155.5)
energy = 0.25
blend_mode = 1

[node name="EnemySpawner" parent="." instance=ExtResource("3_m1h7d")]
position = Vector2(271, 159)
spawns = Array[ExtResource("4_s5r1r")]([SubResource("Resource_qcre1")])
maxEnemies = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_t7rok")

[node name="Score" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 158.0
offset_bottom = 31.0
text = "Inimigos restantes:"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
